<resources>
    <string name="app_name">Instagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign up</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="feed">Feed</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
</resources>